--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=8"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "jest --runInBand"
 	},
 	"files": [
 		"index.js"
@@ -24,7 +24,6 @@
 	],
 	"dependencies": {},
 	"devDependencies": {
-		"ava": "^2.1.0",
-		"xo": "^0.24.0"
+		"jest": "^24.8.0"
 	}
 }
