--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"trailingComma": "es5",
 	"tabWidth": 2,
-	"useTabs": true,
+	"useTabs": false,
 	"singleQuote": true,
 	"printWidth": 150,
 	"bracketSpacing": true
